edit photo in disney

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           </div>
         </div>
         <div class="portfolio-box">
-          <img src="images/disney.PNG" alt="" />
+          <img src="images/disney.png" alt="" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>
