--- a/index.html
+++ b/index.html
@@ -142,33 +142,6 @@
 
       <div class="portfolio-container">
         <div class="portfolio-box">
-          <img src="images/Ahmed.png" alt="" />
-          <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>
-              A personal webpage for the director Ahmed Faris using HTML +
-              Tailwind + a little bit of JavaScript.
-            </p>
-            <a
-              target="_blank"
-              href="https://adhamfares7.github.io/personalWebpage/"
-              ><i class="bx bx-link-external"></i
-            ></a>
-          </div>
-        </div>
-
-        <div class="portfolio-box">
-          <img src="images/foodApp.png" alt="" />
-          <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>food webpage using React + Tailwind</p>
-            <a target="_blank" href="https://adhamfares7.github.io/foodApp/"
-              ><i class="bx bx-link-external"></i
-            ></a>
-          </div>
-        </div>
-
-        <div class="portfolio-box">
           <img src="images/Exam.png" alt="" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
@@ -184,11 +157,26 @@
           </div>
         </div>
         <div class="portfolio-box">
-          <img src="images/E-Commerce2.png" alt="" />
+          <img src="images/foodApp.png" alt="" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
-            <p>E-Commerce2 using React + TalWind</p>
-            <a target="_blank" href="https://adhamfares7.github.io/E-Commerce2/"
+            <p>food webpage using React + Tailwind</p>
+            <a target="_blank" href="https://adhamfares7.github.io/foodApp/"
+              ><i class="bx bx-link-external"></i
+            ></a>
+          </div>
+        </div>
+        <div class="portfolio-box">
+          <img src="images/Ahmed.png" alt="" />
+          <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>
+              A personal webpage for the director Ahmed Faris using HTML +
+              Tailwind + a little bit of JavaScript.
+            </p>
+            <a
+              target="_blank"
+              href="https://adhamfares7.github.io/personalWebpage/"
               ><i class="bx bx-link-external"></i
             ></a>
           </div>
@@ -206,14 +194,22 @@
           </div>
         </div>
         <div class="portfolio-box">
-          <img src="images/portfolio2.jpg" alt="" />
+          <img src="images/E-Commerce2.png" alt="" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione,
-              soluta!
-            </p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
+            <p>E-Commerce2 using React + TalWind</p>
+            <a target="_blank" href="https://adhamfares7.github.io/E-Commerce2/"
+              ><i class="bx bx-link-external"></i
+            ></a>
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="images/E-Commerce.png" alt="" />
+          <div class="portfolio-layer">
+            <h4>Web Design</h4>
+            <p>E-Commerce2 using React + TalWind</p>
+            <a target="_blank" href="https://adhamfares7.github.io/E-Commerce/"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
       </div>
